# gameai-gecode

./: CMakeLists.txt  README.md
include/: Lab1.hpp  lab1.hpp  lab2.hpp  lab3.hpp  lab4.hpp
src/: main.cpp
