cmake_minimum_required(VERSION 2.6)
project(gameai-gecode)
include_directories(include)
add_executable(gameai-gecode src/main.cpp)
set_property(TARGET gameai-gecode PROPERTY CXX_STANDARD 14)
target_link_libraries(gameai-gecode gecodesupport gecodekernel gecodedriver gecodeint gecodeset gecodesearch gecodeminimodel)
